feat: Add all of the card images and make the names more understable

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="text-wrapper-3">Iniciar</div>
               </div>
             </div>
-            <img class="screenshot" src="img/screenshot-2024-06-15-113744-removebg-preview-1.png" />
+            <img class="screenshot" src="img/logoTechPrincipal.png" />
           </div>
           <div class="sound"></div>
         </div>
@@ -36,7 +36,7 @@
             </div>
           </div>
           <div class="rectangle"></div>
-          <img class="screenshot-2" src="img/screenshot-2024-06-15-120359-removebg-preview-1.png" />
+          <img class="screenshot-2" src="img/logoTechSecundario.png" />
         </div>
       </div>
     </div>
