--- a/juego.html
+++ b/juego.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <img class="screenshot" src="img/screenshot-2024-06-15-120359-removebg-preview-1.png" />
+    <img class="screenshot" src="img/logoTechSecundario.png" />
   </header>
 
   <div class="opciones">
