--- a/niveles.html
+++ b/niveles.html
@@ -19,9 +19,9 @@
           <p class="text-wrapper-4">
             El siguiente nivel de dificultad se desloqueará de forma progesiva al superar los otros niveles
           </p>
-          <div class="group" id="principiante"><img class="image-2" src="img/image-14.png" /></div>
-          <div class="group-2" id="intermedio"><img class="image-2" src="img/image-15.png" /></div>
-          <div class="group-3" id="avanzado"><img class="image-2" src="img/image-16.png" /></div>
+          <div class="group" id="principiante"><img class="image-2" src="img/nivel1.png" /></div>
+          <div class="group-2" id="intermedio"><img class="image-2" src="img/nivel2.png" /></div>
+          <div class="group-3" id="avanzado"><img class="image-2" src="img/nivel3.png" /></div>
 
           <div class="sound"></div>
         </div>
@@ -32,7 +32,7 @@
             </div>
           </div>
           <div class="rectangle-3"></div>
-          <img class="screenshot" src="img/screenshot-2024-06-15-120359-removebg-preview-1.png" />
+          <img class="screenshot" src="img/logoTechSecundario.png" />
         </div>
       </div>
     </div>
