feat: pause functionality added

--- a/juego.html
+++ b/juego.html
@@ -22,6 +22,7 @@
       </div>
 
       <div class="botones-opciones">
+        <img src="img/pause-icon.png" id="pausa" />
         <img src="img/informacion.png" id="informacion" />
         <img src="img/reporte.png" id="reporte" />
         <img src="img/sound-muted-icon.png" id="sonido" />
@@ -53,6 +54,11 @@
         <p>¡Se acabó el tiempo!</p>
         <button id="cerrar-popup-tiempo" class="button-focus-two" title="Cerrar pop up" tabindex="41" role="button">Cerrar</button>
       </div>
+    </div>
+
+    <!-- Mensaje de pausa -->
+    <div id="mensaje-pausa" class="mensaje-pausa" style="display: none;">
+      <p>El juego está en pausa. Haz clic en el ícono de play para reanudar.</p>
     </div>
 
     <!-- Agrega tu script al final del body -->
