feat: game information pop-up added

--- a/juego.html
+++ b/juego.html
@@ -72,7 +72,16 @@
         <button type="button" id="cerrar-reportar" class="button-focus-two">Cerrar</button>
       </form>
     </div>
-</div>
+  </div>
+
+    <!-- Pop-up para mostrar información del juego -->
+    <div id="popup-info" class="popup">
+      <div class="popup-contenido">
+          <h2>Información del Juego</h2>
+          <p>Este es un juego de memoria en el que debes encontrar parejas de cartas. Cada vez que encuentres una pareja correcta, se te mostrará un mensaje. Tienes un tiempo limitado para encontrar todas las parejas. ¡Buena suerte!</p>
+          <button id="cerrar-info" class="button-focus-two" title="Cerrar pop up"  role="button">Cerrar</button>
+      </div>
+    </div>
 
     <!-- Agrega tu script al final del body -->
     <script src="js/juego.js"> </script>
