fix: order tab index fixed

--- a/index.html
+++ b/index.html
@@ -12,22 +12,17 @@
     <div class="inicio">
       <div class="div">
         <div class="overlap">
-          <p class="text-wrapper">
+          <p class="text-wrapper" tabindex="4">
             En este juego deberás encontrar los pares de los componentes informáticos para ganar. ¡Hazlo en el menor
-            tiempo posible para obtener más puntos!
+            tiempo posible!
           </p>
-          <div class="group">
-            <div id="opcionesBtn" class="div-wrapper button-focus" aria-label="Botón de opciones." tabindex="3" role="button" title="Botón de opciones.">
-              <div class="text-wrapper-2">Opciones</div>
-            </div>
-          </div>
           <div class="overlap-2">
             <div class="overlap-wrapper">
-              <div id="iniciarBtn" class="div-wrapper button-focus" aria-label="Botón para iniciar." tabindex="2" role="button" onkeypress="presionarConTeclado(event, 'niveles.html')" title="Botón para iniciar.">
+              <div id="iniciarBtn" class="div-wrapper button-focus" aria-label="Botón para iniciar." tabindex="3" role="button" onkeypress="presionarConTeclado(event, 'niveles.html')" title="Botón para iniciar.">
                 <div class="text-wrapper-3" >Iniciar</div>
               </div>
             </div>
-            <img class="screenshot" src="img/logoTechPrincipal.png" alt="Juego Memory Tech" title="Juego Memory Tech"/>
+            <img class="screenshot" src="img/logoTechPrincipal.png" alt="Juego Memory Tech" title="Juego Memory Tech" tabindex="2"/>
           </div>
           <div class="sound"></div>
         </div>
