--- a/niveles.html
+++ b/niveles.html
@@ -18,17 +18,17 @@
           <div class="text-wrapper-3" >Avanzado</div>
           
       
-          <p class="p">Elige un nivel para empezar</p>
-          <p class="text-wrapper-4">
-            El siguiente nivel de dificultad se desloqueará de forma progesiva al superar los otros niveles
+          <p class="p" tabindex="2">Elige un nivel para empezar</p>
+          <p class="text-wrapper-4" tabindex="6">
+            La complejidad de los niveles aumenta según su dificultad, elige la que prefieras.
           </p>
-          <div class="group button-focus" id="principiante" tabindex="2" role="button" onkeypress="presionarConTeclado(event, 'juego.html?nivel=principiante')" title="Iniciar el juego en dificultad principiante." aria-label="Iniciar el juego en dificultad principiante." >
+          <div class="group button-focus" id="principiante" tabindex="3" role="button" onkeypress="presionarConTeclado(event, 'juego.html?nivel=principiante')" title="Iniciar el juego en dificultad principiante." aria-label="Iniciar el juego en dificultad principiante." >
             <img class="image-2" src="img/nivel1.png" aria-label="Seleccionar dificultad fácil." />
           </div>
-          <div class="group-2 button-focus" id="intermedio"  tabindex="3" role="button" onkeypress="presionarConTeclado(event, 'juego.html?nivel=intermedio')" title="Iniciar el juego en dificultad intermedia." aria-label="Iniciar el juego en dificultad intermedia.">
+          <div class="group-2 button-focus" id="intermedio"  tabindex="4" role="button" onkeypress="presionarConTeclado(event, 'juego.html?nivel=intermedio')" title="Iniciar el juego en dificultad intermedia." aria-label="Iniciar el juego en dificultad intermedia.">
             <img class="image-2" src="img/nivel2.png" aria-label="Seleccionar dificultad intermedia."/>
           </div>
-          <div class="group-3 button-focus" id="avanzado"  tabindex="4" role="button" onkeypress="presionarConTeclado(event, 'juego.html?nivel=avanzado')" title="Iniciar el juego en dificultad avanzada." aria-label="Iniciar el juego en dificultad avanzada." >
+          <div class="group-3 button-focus" id="avanzado"  tabindex="5" role="button" onkeypress="presionarConTeclado(event, 'juego.html?nivel=avanzado')" title="Iniciar el juego en dificultad avanzada." aria-label="Iniciar el juego en dificultad avanzada." >
             <img class="image-2" src="img/nivel3.png" aria-label="Seleccionar dificultad avanzada."/>
           </div>
 
