fix: constrast errors

--- a/juego.html
+++ b/juego.html
@@ -88,7 +88,7 @@
     <div class="popup-contenido">
       <h2 id="popup-info-titulo">Información del Juego</h2>
       <div class="popup-contenido-texto" id="popup-info-texto">
-        <p>Este es un juego de memoria en el que debes encontrar parejas de cartas. Cada vez que encuentres una pareja correcta, se te mostrará un mensaje. Tienes un tiempo limitado para encontrar todas las parejas. ¡Buena suerte!</p>
+        <p>Este es un juego de memoria en el que debes encontrar parejas de cartas. Cada vez que encuentres una pareja correcta, se te mostrará un mensaje. Tienes un tiempo limitado para encontrar todas las parejas, para volver al juego también puedes usar la tecla [ESC]</p>
       </div>
       <button id="cerrar-info" class="button-focus-two" title="Cerrar pop up" role="button">Cerrar</button>
     </div>
